--- a/src/App.scss
+++ b/src/App.scss
@@ -53,11 +53,13 @@ html, body {
 #root {
   display: grid;
   grid-template-rows: auto 1fr;
+  grid-template-columns: 16% 1fr 34%;
   height: 100%;
   width: 100%;
 }
 .navbar {
   grid-row: 1;
+  grid-column: 1 / span 3;
   background-color: #f0f0f0;
   /* padding: 10px; */
   height: 80px;
@@ -70,7 +72,33 @@ html, body {
   /* gap: 20px; */
 }
 
-.column {
-  border: 1px solid #ccc;
-  padding: 20px;
+.column1 {
+  grid-row: 2;
+  grid-column: 1;
+  /* Add your content here */
+  // background-color: blueviolet;
+  background-color: #fbfbfb;
+}
+
+.column2 {
+  grid-row: 2;
+  grid-column: 2;
+  /* Add your content here */
+  background-color: lightgreen;
+}
+
+.column3 {
+  grid-row: 2;
+  grid-column: 3;
+  /* Add your content here */
+  background-color: darkorange;
+}
+.separator {
+  height: 0.75px;
+  background-color: #E6E4F0;
+  margin: 0 20px;
+}
+.sep-holder {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
