--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,6 @@
 @import "./variable.scss";
+@import "./HomeMain.scss";
+@import "./HomeSide.scss";
 
 /* #root {
   max-width: 1280px;
@@ -78,27 +80,25 @@ html, body {
   /* Add your content here */
   // background-color: blueviolet;
   background-color: #fbfbfb;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
 }
 
-.column2 {
-  grid-row: 2;
-  grid-column: 2;
-  /* Add your content here */
-  background-color: lightgreen;
-}
-
-.column3 {
-  grid-row: 2;
-  grid-column: 3;
-  /* Add your content here */
-  background-color: darkorange;
-}
 .separator {
-  height: 0.75px;
+  height: 0.95px;
   background-color: #E6E4F0;
   margin: 0 20px;
 }
 .sep-holder {
   padding-top: 5px;
   padding-bottom: 5px;
+}
+.side-menu-list {
+  flex: 0 0 22%;
+  background-color: red;
+}
+.sm-extras {
+  flex: 1 0 auto;
+  background-color: turquoise;
 }
