Added Progress Element

--- a/src/styles/HomeMain.scss
+++ b/src/styles/HomeMain.scss
@@ -19,9 +19,10 @@
     font-family: "Plus Jakarta Sans";
     font-weight: 600;
     font-size: 28px;
-    // letter-spacing: 2%;
+    letter-spacing: 2%;
     color: black;
 }
+
 .chartSection{
     background-color: yellow;
     height: 36%;
