--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,8 +1,9 @@
 $peri-test: #9FA8F0;
 $background-main: #FBFBFB;
 $todo-color:#49CCF9;
-$todo-background:#49cdf971;
+$todo-background:#49cdf930;
 $in-progress-color:#9FA8F0;
-$in-progress-background:#9FA8F071;
+$in-progress-background:#9FA8F030;
 $complete-color:#00B884;
-$complete-background:#00B88471;
+$complete-background:#00B88430;
+$text-heading: #56555C
