--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,7 @@
 @import "./variable.scss";
 @import "./HomeMain.scss";
 @import "./HomeSide.scss";
+@import "./Sidebar.scss";
 
 /* #root {
   max-width: 1280px;
