--- a/src/styles/HomeMain.scss
+++ b/src/styles/HomeMain.scss
@@ -36,4 +36,25 @@
     margin-top: 20px;
     margin-bottom: 20px;
     // border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.notes-section-header {
+    background-color: red;
+    height: 15%;
+    display: flex;
+    align-items: center;
+}
+.notes-list {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.NotesItem {
+    width: 30%;
+    height: 100%;
+    background-color: yellow;
+    border-radius: 10px;
 }
