--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,7 @@
 @import "./HomeMain.scss";
 @import "./HomeSide.scss";
 @import "./Sidebar.scss";
+@import "./Navbar.scss";
 
 /* #root {
   max-width: 1280px;
@@ -60,14 +61,7 @@ html, body {
   height: 100%;
   width: 100%;
 }
-.navbar {
-  grid-row: 1;
-  grid-column: 1 / span 3;
-  background-color: #f0f0f0;
-  /* padding: 10px; */
-  height: 80px;
-  background-color: $peri-test;
-}
+
 .content {
   grid-row: 2;
   display: grid;
