--- a/src/styles/HomeSide.scss
+++ b/src/styles/HomeSide.scss
@@ -78,6 +78,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    margin-bottom: 5px;
     // height: 100px;
 }
 .task-top {
@@ -101,4 +102,7 @@
 }
 .task-tag-holder {
     height: 35px;
+}
+.SubTask {
+    margin-left: 30px;
 }
