--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -6,4 +6,5 @@ $in-progress-color:#9FA8F0;
 $in-progress-background:#9FA8F030;
 $complete-color:#00B884;
 $complete-background:#00B88430;
-$text-heading: #56555C
+$text-heading: #56555C;
+$side-menu-color: #FFFFFF;
