--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -124,11 +124,13 @@
 
 .search {
     position: relative;
-    width: 190px;
+    // width: 190px;
+    width: 100%;
     height: 30px;
 }
 .round {
     width: 100%;
+    height: 46px;
     border-radius: 15px;
     border: 1px #000 solid;
     padding: 5px 5px 5px 25px;
