Remove a few background colors.

--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -105,6 +105,8 @@
     font-weight: 400;
     line-height: 17.64px;
     text-align: left;
+    color: #A0A0A3;
+
 }
 .UserDetailHolder span:first-child {
     font-family: Plus Jakarta Sans;
