--- a/src/styles/HomeMain.scss
+++ b/src/styles/HomeMain.scss
@@ -9,7 +9,7 @@
     grid-row: 2;
     grid-column: 2;
     /* Add your content here */
-    background-color: lightgreen;
+    background-color: $background-main;
     padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
