--- a/src/styles/HomeSide.scss
+++ b/src/styles/HomeSide.scss
@@ -2,7 +2,7 @@
     grid-row: 2;
     grid-column: 3;
     /* Add your content here */
-    background-color: darkorange;
+    background-color: $background-main;
     display: flex;
     flex-direction: column;
     padding-top: 10px;
@@ -11,7 +11,7 @@
 }
 
 .calendar-section {
-    flex: 0 0 25%;
+    flex: 0 0 20%;
     background-color: red;
     margin-bottom: 10px;
 }
