--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
   }
 
 //   search
@@ -71,12 +72,17 @@
     // background-color: white;
     position: absolute;
     z-index: 6;
+    width: 22px;
+    height: 22px;
 }
 .SearchSpace input {
-    flex-grow: 1;
-    height: 80%;
+    // flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    height: 100%;
     background-color: white;
     border: 0px;
+    text-indent: 20px;
 }
 
 //Add Task btn
@@ -133,9 +139,19 @@
     height: 46px;
     border-radius: 15px;
     border: 1px #000 solid;
-    padding: 5px 5px 5px 25px;
+    // padding: 5px 5px 5px 25px;
+    padding-left: 25px;
+
     position: absolute;
     top: 0;
     left: 0;
     z-index: 5;
+}
+round::placeholder {
+    font-family: Plus Jakarta Sans;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20.16px;
+    text-align: left;
+    text-indent: 300px;
 }
