--- a/src/styles/HomeSide.scss
+++ b/src/styles/HomeSide.scss
@@ -12,7 +12,7 @@
 
 .calendar-section {
     flex: 0 0 20%;
-    background-color: red;
+    // background-color: red;
     margin-bottom: 10px;
 }
 .progress-section {
@@ -152,4 +152,97 @@
     font-weight: 600;
     line-height: 15.12px;
     text-align: left;
+}
+.CalendarElement {
+    width: 55px;
+    height: 75px;
+    // background-color: green;
+    border-radius: 10px;
+    border: 1px solid #E6E4F0;
+    display: flex;
+    flex-direction: column;
+}
+.CalendarElementSelected {
+    width: 76px;
+    height: 106px;
+    // background-color: green;
+    border-radius: 10px;
+    border: 1px solid #E6E4F0;
+    display: flex;
+    flex-direction: column;
+}
+.internalColor {
+    width: 100%;
+    height: 17px;
+    background-color: #FD71AF;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.internalColorSelected {
+    width: 100%;
+    height: 24px;
+    background-color: #FD71AF;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.calTextHolder {
+    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.calTextHolderSelected {
+    width: 100%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.calTextHolder span:first-child {
+    font-family: Plus Jakarta Sans;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 27.72px;
+    text-align: center;
+    color: #56555C;
+}
+.calTextHolder span:not(:first-child) {
+    font-family: Plus Jakarta Sans;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 18.9px;
+    text-align: center;
+    color: #56555C;
+}
+.calTextHolderSelected span:first-child {
+    font-family: Plus Jakarta Sans;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 32.76px;
+    text-align: center;
+    color: #56555C;
+}
+.calTextHolderSelected span:not(:first-child) {
+    font-family: Plus Jakarta Sans;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25.2px;
+    text-align: center;
+    color: #56555C;
+}
+.calendarIconsHolder {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
 }
