--- a/src/styles/HomeSide.scss
+++ b/src/styles/HomeSide.scss
@@ -174,7 +174,7 @@
 .internalColor {
     width: 100%;
     height: 17px;
-    background-color: #FD71AF;
+    background-color: #FEC6DF;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
