--- a/src/styles/HomeMain.scss
+++ b/src/styles/HomeMain.scss
@@ -25,7 +25,8 @@
 }
 
 .chartSection{
-    background-color: yellow;
+    background-color: white;
+    border: 1px solid #ECEBF3;
     height: 36%;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -64,7 +65,7 @@
     flex: 1;
     height: 100%;
     // height: 370px;
-    background-color: yellow;
+    background-color: white;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -89,6 +90,7 @@
     color: $NotesText;
     padding-left: 10px;
     padding-top: 10px;
+    padding-right: 5px;
 }
 .attachmentHeading {
     font-family: Plus Jakarta Sans;
