--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -11,7 +11,8 @@
     justify-content: center;
     border-radius: 24px;
     padding-top: 25px;
-    margin-top: -25%;
+    // margin-top: -25%;
+    margin-top: calc(-47px);
 
 }
 .upgradetextHolder span:not(:first-child) {
@@ -41,7 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 25%;
+    margin-left: calc(50% - 47px);
 }
 .innercircle1 {
     width: 41px;
