--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -51,7 +51,8 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: white;
+  // background-color: white;
+  background-color: $background-main;
 }
 
 
