--- a/src/styles/HomeMain.scss
+++ b/src/styles/HomeMain.scss
@@ -12,8 +12,9 @@
     background-color: $background-main;
     padding-top: 10px;
     width: 100%;
-    // padding-left: 20px;
+    padding-left: 10px;
     // padding-right: 20px;
+    height: calc(100vh - 80px);
 }
 
 .user-title-text{
@@ -70,6 +71,7 @@
     display: flex;
     flex-direction: column;
     // overflow-x: auto;
+    border: 1px solid #E6E4F0
 }
 .notesTitle {
     font-family: Plus Jakarta Sans;
