--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -9,3 +9,6 @@ $complete-background:#00B88430;
 $text-heading: #56555C;
 $side-menu-color: #FFFFFF;
 $NotesText: #888793;
+$todo-background-hover: #49cdf969;
+$Add-Task-button-hover: #497bf9;
+$rt-blue-hover: #7b68ee4f;
