--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -57,24 +57,31 @@ html, body {
 
 
 #root {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  // grid-template-columns: 16% 1fr 34%;
-  grid-template-columns: 1.5fr 4.5fr 3fr;
+  display: Flex;
+  // grid-template-rows: auto 1fr;
+  // // grid-template-columns: 16% 1fr 34%;
+  // grid-template-columns: 1.5fr 4.5fr 3fr;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 }
+.mainContentHolder{
+  display: flex;
+  flex-direction: row;
+  // min-height: calc(100vh - 80px);
+  min-height: auto;
+}
 
 .content {
-  grid-row: 2;
+  // grid-row: 2;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  // grid-template-columns: repeat(3, 1fr);
   /* gap: 20px; */
 }
 
 .column1 {
-  grid-row: 2;
-  grid-column: 1;
+  // grid-row: 2;
+  // grid-column: 1;
   /* Add your content here */
   // background-color: blueviolet;
   // background-color: #fbfbfb;
@@ -83,6 +90,7 @@ html, body {
   flex-direction: column;
   padding-top: 10px;
   align-items: center;
+  min-width: 15rem;
   // height: 100vh;
   height: calc(100vh - 80px);
 }
