--- a/src/styles/HomeMain.scss
+++ b/src/styles/HomeMain.scss
@@ -6,15 +6,15 @@
     margin-top: 10px;
 }
 .column2 {
-    grid-row: 2;
-    grid-column: 2;
+    // grid-row: 2;
+    // grid-column: 2;
     /* Add your content here */
     background-color: $background-main;
     padding-top: 10px;
     width: 100%;
     padding-left: 10px;
     // padding-right: 20px;
-    height: calc(100vh - 80px);
+    // height: calc(100vh - 80px);
 }
 
 .user-title-text{
@@ -53,7 +53,7 @@
 }
 .notes-list {
     width: 100%;
-    height: 85%;
+    // height: 85%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -64,7 +64,7 @@
 .NotesItem {
     // width: 30%;
     flex: 1;
-    height: 100%;
+    // height: 100%;
     // height: 370px;
     background-color: white;
     border-radius: 10px;
@@ -127,4 +127,47 @@
     height: 38px;
     border-radius: 10px;
     border: 1.5px solid #7B68EE
+}
+
+.attachmentHolder {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 10px;
+    padding-top: 10px;
+    gap:10px
+    // color: black;
+}
+.attachmentHolder span {
+    font-family: Plus Jakarta Sans;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15.12px;
+    text-align: left;
+    color: #888793;
+}
+.dateHolder {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px ;
+}
+.dateHolder span {
+    font-family: Plus Jakarta Sans;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 12.6px;
+    text-align: left;
+    color: #BBBABE;
+}
+.rtSmallHolder {
+    border: 2px solid #7B68EE;
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
