--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -12,3 +12,4 @@ $NotesText: #888793;
 $todo-background-hover: #49cdf969;
 $Add-Task-button-hover: #497bf9;
 $rt-blue-hover: #7b68ee4f;
+$chart-green: #05CD99;
