--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -120,3 +120,16 @@
     width: 22px;
     height: 22px;
 }
+// .badgeProfPic img {
+//     position: relative;
+// }
+.GreenDot {
+    position: relative;
+    width: 10px;
+    height: 10px;
+    background-color: $complete-color;
+    margin-top: -18px;
+    margin-left: 35px;
+    border: 3px solid white;
+    border-radius: 4px;
+}
